# heartbeat-monitor

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  LICENSE  README.md  docker-compose.demo.yml  docker-compose.smtp.yml  docker-compose.yml  fly.postgres.toml  fly.toml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 197ec6c37b39_create_endpoints.py  1e697fab1bb8_create_users.py  3e8a5f2b9c01_create_check_results.py  b2e8f7a6d3c9_create_incidents_and_postmortems.py  c5f3b2e8d1a7_create_email_recipients_and_sent_notifications.py  d4e6b8f0a2c5_create_rollups.py
backend/src/heartbeat/: clock.py  config.py  db.py  dependencies.py  main.py  rollup.py  scheduler.py  seed.py
backend/src/heartbeat/ai/: client.py  prompts.py
backend/src/heartbeat/alerts/: __init__.py  log_sink.py  smtp_sink.py
backend/src/heartbeat/api/: endpoints.py  incidents.py  notifications.py  recipients.py  storage.py
backend/src/heartbeat/checker/: __init__.py  real.py  simulated.py
backend/src/heartbeat/models/: __init__.py  check_result.py  daily_rollup.py  email_recipient.py  endpoint.py  incident.py  (+3 more)
backend/tests/integration/: conftest.py  test_alerts.py  test_endpoints.py  test_incident_service.py  test_incidents.py  test_lifespan.py  test_migrations.py  test_postmortem.py  test_rollup.py  test_scheduler.py  test_seed.py  test_system_status.py
backend/tests/unit/: test_clock.py  test_endpoint_schemas.py  test_incident_service.py  test_prompts.py  test_real_checker.py  test_rollup.py  test_simulated_checker.py  test_smtp_sink.py
(+57 files in other folders)
